add thermal papers
also resolve conflicts

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -45,6 +45,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@inproceedings{LiuWang:ASPDAC'16,
+ author = {Wandi Liu and Hai Wang and Hengyang Zhao and Shujuan Wang and Haibao Chen and Yuzhuo Fu and Jian Ma and Xin Li and Sheldon Tan},
+ title = {Thermal Modeling for Energy-Efficient Smart Building With Advanced Overfitting Mitigation Technique},
+ booktitle = aspdac,
+ year = {2016},
+ month = {January},
+ location = {Macao, China},
+ pages = {417--422}
+}
+
 @inproceedings{WangTan:DATE'12,
  author = {Hai Wang and Sheldon Tan and Xue-Xin Liu and Ashish Gupta},
  title = {Runtime power estimator calibration for high-performance microprocessors},
@@ -139,6 +150,14 @@ month ={Nov.},
   volume = {27},
   number = {3},
   month = {May-June},
+}
+
+@InProceedings{Brooks:ISCA'01,
+  author =       {David Brooks and Margaret Martonosi},
+  title =        {Dynamic thermal management for high-performance microprocessors},
+  booktitle =    isca,
+  pages =    {171-182},
+  year =     {2001},
 }
 
 @inproceedings{Donald:ISCA'06,
@@ -351,6 +370,52 @@ pages = {187--192}
   volume = {14},
   number = {5},
   month = {May},
+}
+
+@article{Li:TODAES'10,
+ author = {Li, Duo and Tan, Sheldon X.-D. and Pacheco, Eduardo H. and Tirumala, Murli},
+ title = {Parameterized architecture-level dynamic thermal models for multicore microprocessors},
+ journal = {ACM Trans. Des. Autom. Electron. Syst.},
+ volume = {15},
+ number = {2},
+ year = {2010},
+ issn = {1084-4309},
+ pages = {1--22},
+ doi = {http://doi.acm.org/10.1145/1698759.1698766},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+@article{Eguia:TVLSI'11,
+ author = {T. Eguia and S. X.-D. Tan and R. Shen and D. Li and  E. H. Pacheco and M. Tirumala and L. Wang},
+ title = {General parameterized thermal modeling for high-performance microprocessor design},
+ journal = tvlsi,
+ OPTvolume = {57},
+ OPTnumber = {9},
+ year = {2011},
+ OPTissn = {1084-4309},
+ OPTpages = {750--755},
+ }
+
+@Article{Overschee:Auto'94,
+  author =               {P.~V.~Overschee and B.~D.~Moor},
+  title =                {{N4SID}: Subspace Algorithms for the Identification of Combined Deterministic-Stochastic Systems},
+  journal =      {Automatica},
+  year =                 {1994},
+  OPTkey =               {},
+  volume =       {30},
+  number =       {1},
+  pages =        {75-93},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@BOOK{Katayama:Book'05,
+  AUTHOR =       "Tohru Katayama",
+  OPTeditor =       "",
+  TITLE =        "Subspace Methods for System Identification",
+  PUBLISHER =    "Springer",
+  YEAR =         "2005",
 }
 
 @inproceedings{Brooks:ISCA'00,
@@ -638,6 +703,86 @@ title = {{OpenRISC}},
 OPTmonth = jun,
 OPTyear = {2009},
 url = {http://opencores.org}
+}
+
+@ONLINE{build_doe_data:Online,
+title = {{Building Energy Data Book of DOE}},
+url = {http://buildingsdatabook.eren.doe.gov}
+}
+
+@ONLINE{trnsys:Online,
+title = {{TRNSYS  -- A transient systems simulation program}},
+url = {http://www.trnsys.com/}
+}
+
+@inproceedings{Massoumy:ICCPS'13,
+author = {Massoumy, M and Zhu, Qi and Li, Cheng and Meggers, F and Sangiovanni-Vincentelli, A},
+title = {{Co-design of Control Algorithm and Embedded Platform for Building HVAC Systems }},
+booktitle = {International Conference on Cyber Physical Systems (ICCPS)},
+year = {2013},
+pages = {61--70},
+address = {Philadephia, PA},
+month = {April}
+}
+
+@book{Malkawi:Book'04,
+editor = {Malkawi, Ali and Augenbroe, Godfried},
+title = {{Advanced Building Simulation}},
+publisher = {Spon Press},
+year = {2004},
+month = {June}
+}
+
+@inproceedings{Kim:IBPSA'12,
+author = {Kim, D and Braun, J E},
+title = {{Reduced-Order Building Modeling For Application to Model-Based Predictive Control}},
+booktitle = {5th National Conference of Innational Building Performance Simulation Association (IBPSA-USA)},
+year = {2012},
+pages = {554--561},
+month = aug
+}
+
+@inproceedings{Deng:ACC'10,
+author = {Deng, Kun and Barooah, Prabir and Mehta, Prashant G and Meyn, Sean P},
+title = {{Building Thermal Model Reduction via Aggregation of States}},
+booktitle = {American Control Conference},
+year = {2010},
+pages = {5118--5123},
+address = {Baltimore, MD},
+month = jun
+}
+
+@inproceedings{Eisenhower:DFD'12,
+author = {Eisenhower, Bryan and Mezic, Igor},
+title = {{Extracting Dynamic Information from Whole-building Energy Models}},
+booktitle = {Proc. of Conference on Dynamics for Design (DFD)},
+year = {2012},
+pages = {3--10},
+address = {Chicago, IL},
+month = apr
+}
+
+@Article{Hua:TAP'89,
+  author =       {Y.~Hua and T.K.~Sarkar},
+  title =        {Generalized pencil of function method for extracting poles of an EM system from its transient responses},
+  journal =      {IEEE Trans. on Antennas and Propagation},
+  year =         {1989},
+  OPTkey =       {},
+  volume =   {37},
+  number =   {2},
+  pages =    {229-234},
+  month =    {Feb.},
+}
+
+@article{Crawley:JEB'01,
+author = {Crawley, D B and Lawrie, L K and Winkelmann, F C and Buhl, W F and Huang, Y J and Pedersen, C O and Strand, R K and Liesen, R J and Fisher, D E and Witte, M J and Glazer, J},
+title = {{EnergyPlus: creating a new-generation building energy simulation program}},
+journal = {Energy and Buildings},
+year = {2001},
+volume = {33},
+number = {4},
+pages = {319--331},
+month = {April}
 }
 
 @article{Abdollahi:TVLSI'04,
@@ -1096,4 +1241,53 @@ year={2008},
  journal=tcad,
  year="1998",
  pages="645-654",
+
+@Misc{ITRS'10,
+  key =       {ITRS},
+  title =    {International Technology Roadmap for Semiconductors ({ITRS}), 2010 Update},
+  year =     2010,
+  note =     {http://public.itrs.net}
+}
+
+@Article{Gunther:ITJ'01,
+  author =       {Stephen Gunther and Frank Binns and Douglas Carmean and Jonathan Hall},
+  title =        {Managing the Impact of Increasing Microprocessor Power Consumption},
+  journal =      {Intel Technology Journal},
+  year =         {2001},
+  volume =       {5},
+  issue =        {1},
+  month =        {February},
+}
+
+@Article{Pedram:IEEEPROC'06,
+  author =       {M.~ Pedram and S.~Nazarian},
+  title =        {Thermal Modeling, Analysis, and Management in {VLSI} Circuits: Principles and Methods},
+  journal =      ieeeproc,
+  year =         {2006},
+  volume =   {94},
+  number =   {8},
+  pages =    {1487-1501},
+  month =    {Aug.},
+}
+
+@Article{Li:HPCA'06,
+  author =       {Y.~Li and B.~C.~Lee and D.~Brooks and Z.~Hu and K.~Skadron},
+  title =        {{CMP} Design Space Exploration Subject to Physical Constraints},
+  journal =       {Proc. IEEE Int. Symp. on High Performance Computer Architecture (HPCA)},
+  year =         {2006},
+  pages =    {15-26},
+}
+
+@Misc{IntelMC'06,
+  author = {{Intel Corporation}},
+  title =    {Intel Multi-Core Processors, Making the move to quad-core and beyond ({W}hite {P}aper)},
+  year =     2006,
+  note =     {\url{http://www.intel.com/multi-core}}
+}
+
+@Misc{AMDMC'06,
+  author = {{AMD Inc.}},
+  title =    {Multi-Core Processors---The Next Evolution in Computing ({W}hite {P}aper)},
+  year =     2006,
+  note =     {\url{http://multicore.amd.com}}
 }
