minor update for isqed paper

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -56,6 +56,16 @@
  pages = {417--422}
 }
 
+@inproceedings{ZhangWang:ISQED'16,
+ author = {Lang Zhang and Hai Wang and Sheldon X.-D. Tan},
+ title = {Fast stress analysis for runtime reliability enhancement of 3D IC using artificial neural network},
+ booktitle = isqed,
+ year = {2016},
+ month = {March},
+ location = {San Jose, CA},
+ pages = {173--178}
+}
+
 @inproceedings{WangTan:DATE'12,
  author = {Hai Wang and Sheldon Tan and Xue-Xin Liu and Ashish Gupta},
  title = {Runtime power estimator calibration for high-performance microprocessors},
@@ -111,11 +121,11 @@
 	author = {Hai Wang and Jian Ma and Sheldon Tan and Chi Zhang and He Tang and Keheng Huang and Zhenghong Zhang},
 	journal = todaes,
 	title = {Hierarchical Dynamic Thermal Management Method for High-Performance Many-Core Microprocessors},
-	year = {in press},
-        OPTmonth = {March},
-        OPTvolume = {18},
-        OPTnumber = {2},
-        OPTpages = {28:1--28:27},
+	year = {2016},
+        month = {July},
+        volume = {22},
+        number = {1},
+        pages = {1:1--1:21},
 }
 
 @conference{WangTan:ICCAD'11,
