--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -41,6 +41,7 @@
 @string{sigops = "ACM SIGPLAN NOTICES "}
 @string{istfa = "35th International Symposium for Testing and Failure Analysis, ISTFA"}
 @string{acmcomm="Communications of the ACM"}
+@string{ieee-socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -64,6 +65,15 @@
  month = {March},
  location = {San Jose, CA},
  pages = {173--178}
+}
+
+@inproceedings{WangZhang:SOCC'16,
+ author = {Hai Wang and Ming Zhang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
+ title = {New Power Budgeting and Thermal Management Scheme for Multi-Core Systems in Dark Silicon},
+ booktitle = ieee-socc,
+ year = {2016},
+ month = {September},
+ location = {Seattle, WA}
 }
 
 @inproceedings{WangTan:DATE'12,
