--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -25,7 +25,6 @@
 @string{tcasII = "IEEE Trans. on Circuits and Systems II: Analog and Digital Signal Processing"}
 @string{bmas = "Proc. IEEE International Workshop on Behavioral Modeling and Simulation (BMAS)"}
 @string{aicsp = "Kluwer International Journal on Analog Integrated Circuits and Signal Processing"}
-@string{soc = "IEEE Int. System-on-Chip Conf. (SOC)"}
 @string{ieice="IEICE Trans. Fundamentals of Electronics, Communications and Computer Sciences"}
 @string{mcmc="IEEE Multi-Chip Module Conference"}
 @string{jrssb = "Journal of the Royal Statistical Society. Series B (Methodological)"}
@@ -33,7 +32,7 @@
 @string{tsp= "IEEE Trans. on Signal Processing"}
 @string{glsvlsi = "Proc. IEEE/ACM International Great Lakes Symposium on VLSI (GLSVLSI)"}
 @string{ieeeproc = "Proc. of the IEEE"}
-@string{ acc = "Proc. American Control Conference"}
+@string{acc = "Proc. American Control Conference"}
 @string{asplos = "Proc. of International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS) "}
 @string{isqed = "Proc. Int. Symposium. on Quality Electronic Design (ISQED)"}
 @string{hpca = "Proc. IEEE Int. Symp. on High-Performance Computer Architecture (HPCA)"}
@@ -41,7 +40,7 @@
 @string{sigops = "ACM SIGPLAN NOTICES "}
 @string{istfa = "35th International Symposium for Testing and Failure Analysis, ISTFA"}
 @string{acmcomm="Communications of the ACM"}
-@string{ieee-socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
+@string{socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -70,7 +69,7 @@
 @inproceedings{WangZhang:SOCC'16,
  author = {Hai Wang and Ming Zhang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
  title = {New Power Budgeting and Thermal Management Scheme for Multi-Core Systems in Dark Silicon},
- booktitle = ieee-socc,
+ booktitle = socc,
  year = {2016},
  month = {September},
  location = {Seattle, WA}
