--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -402,7 +402,7 @@ pages = {187--192}
   OPTkey =               {},
   volume =       {30},
   number =       {1},
-  pages =        {75-93},
+  pages =        {75--93},
   OPTnote =      {},
   OPTannote =    {}
 }
@@ -767,7 +767,7 @@ month = apr
   OPTkey =       {},
   volume =   {37},
   number =   {2},
-  pages =    {229-234},
+  pages =    {229--234},
   month =    {Feb.},
 }
 
@@ -1092,7 +1092,7 @@ Year = {2010},
  title = {A Novel Approach for the Thermal Characterization of Electronic Parts},
  booktitle = {Proceedings of the IEEE 11th Annual Semiconductor Thermal Measurement and Management Symposium},
  year = {1995},
- pages = {1-9},
+ pages = {1--9},
  location = {San Jose, California},
  }
 
@@ -1104,7 +1104,7 @@ Year = {2010},
   OPTkey =       {},
   volume =   {21},
   number =   {4},
-  pages =     {565-576},
+  pages =     {565--576},
   month =     {December},
   OPTnote =      {},
   OPTannote =    {}
@@ -1118,7 +1118,7 @@ Year = {2010},
   OPTkey =       {},
   volume =   {36},
   number =   {8},
-  pages =     {700-704},
+  pages =     {700--704},
   month =     {August},
   OPTnote =      {},
   OPTannote =    {}
@@ -1132,7 +1132,7 @@ Year = {2010},
   OPTkey =       {},
   volume =   {33},
   issue = {9},
-  pages =     {719-725},
+  pages =     {719--725},
   month =     {September},
   OPTnote =      {},
   OPTannote =    {}
@@ -1143,7 +1143,7 @@ Year = {2010},
   title =        {Thermal Transient Modeling and Experimental Validation in the European Project {PROFIT}},
   journal =      {IEEE Tran. on Components and Pacakaging Technologies},
   year =         {2004},
-  pages =    {530-538},
+  pages =    {530--538},
   volume = {27},
   number = {3},
   month = {September},
@@ -1154,7 +1154,7 @@ Year = {2010},
     title = {Boundary Condition Independent Dynamic Compact Models of Packages and Heat Sinks from Thermal Transient Measurements},
     booktitle = {Proceedings of the 5th Electronics Packaging Technology Conference},
     year = {2003},
-    pages = {479-484},
+    pages = {479--484},
 }
 
 @article{Li:TODAES'10,
@@ -1164,7 +1164,7 @@ Year = {2010},
  volume = {15},
  number = {2},
  year = {2010},
- issn = {1084-4309},
+ issn = {1084--4309},
  pages = {1--22},
  doi = {http://doi.acm.org/10.1145/1698759.1698766},
  publisher = {ACM},
@@ -1178,7 +1178,7 @@ Year = {2010},
   year =         {2009},
   volume =      {17},
   number =      {10},
-  pages = {1495-1507},
+  pages = {1495--1507},
   }
 
 @Article{Yang:TCAD'07,
@@ -1186,7 +1186,7 @@ Year = {2010},
   title =        {{ISAC}: Integrated Space and Time Adaptive Chip-Package Thermal Analysis},
   journal =       tcad,
   year =         {2007},
-  pages =    {86-99},
+  pages =    {86--99},
   volume = {16},
   number = {1},
 }
@@ -1211,7 +1211,7 @@ Publisher="Cambridge University Press",
 author={J.~R.~Phillips and L.~M.~Silveira},
 title={Poor man's {TBR}: a simple model reduction scheme},
 journal = tcad,
-pages = {43- 55},
+pages = {43--55},
 volume = {24},
 number = {1},
 year = {2005},
@@ -1228,7 +1228,7 @@ Publisher="University of Illinois at Urbana-Champaign"
 author={B.~Yan and S.~X-.D.~Tan and G.~Chen and L.~Wu},
 title={Modeling and simulation for on-chip power grid networks by locally dominant Krylov subspace method},
 booktitle= iccad,
-pages = {744-749},
+pages = {744--749},
 year={2008},
 }
 
@@ -1237,7 +1237,7 @@ year={2008},
  author="A. Odabasioglu and M. Celik and L.T. Pileggi",
  journal=tcad,
  year="1998",
- pages="645-654",
+ pages="645--654",
 }
 
 @Misc{ITRS'10,
@@ -1264,14 +1264,14 @@ year={2008},
   year =         {2006},
   volume =   {94},
   number =   {8},
-  pages =    {1487-1501},
+  pages =    {1487--1501},
   month =    {Aug.},
 }
 
 @Article{Li:HPCA'06,
   author =       {Y.~Li and B.~C.~Lee and D.~Brooks and Z.~Hu and K.~Skadron},
   title =        {{CMP} Design Space Exploration Subject to Physical Constraints},
-  journal =       {Proc. IEEE Int. Symp. on High Performance Computer Architecture (HPCA)},
+  journal =       hpca,
   year =         {2006},
   pages =    {15-26},
 }
@@ -1289,3 +1289,22 @@ year={2008},
   year =     2006,
   note =     {\url{http://multicore.amd.com}}
 }
+
+@Article{Wei:TC'08,
+  author =       {Wei Huang and Karthik Sankaranarayanan and Kevin Skadron and Robert J. Ribando and Mircea R. Stan},
+  title =        {Accurate, Pre-{RTL} Temperature-Aware Processor Design Using a Parameterized, Geometric Thermal Model},
+  journal =       tcomp,
+  volume =   {57},
+  number =   {9},
+  year =         {2008},
+  pages =    {1277--1288},
+}
+
+@inproceedings{He:DAC'04,
+ author = {Lei He and Weiping Liao and Mircea R. Stan},
+ title = {System level leakage reduction considering the interdependence of temperature and leakage},
+ booktitle = dac,
+ year = {2004},
+ pages = {12--17},
+ location = {San Diego, California},
+ }
