--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1308,3 +1308,13 @@ year={2008},
  pages = {12--17},
  location = {San Diego, California},
  }
+
+@inproceedings{Brand:ECCV'02,
+ author = {Matthew Brand},
+ title = {Incremental Singular Value Decomposition of Uncertain Data with Missing Values},
+ booktitle = {Proc. European Conference on Computer Vision},
+ year = {2002},
+ pages = {707--720},
+ location = {Copenhagen, Denmark},
+ month =    {May},
+ }
