--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1290,7 +1290,7 @@ year={2008},
   note =     {\url{http://multicore.amd.com}}
 }
 
-@Article{Wei:TC'08,
+@Article{Huang:TC'08,
   author =       {Wei Huang and Karthik Sankaranarayanan and Kevin Skadron and Robert J. Ribando and Mircea R. Stan},
   title =        {Accurate, Pre-{RTL} Temperature-Aware Processor Design Using a Parameterized, Geometric Thermal Model},
   journal =       tcomp,
