--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1318,3 +1318,13 @@ year={2008},
  location = {Copenhagen, Denmark},
  month =    {May},
  }
+
+@Article{Zhao:SMCB'06,
+  author =       {Haitao Zhao and Pong Chi Yuen and James T. Kwok},
+  title =        {A Novel Incremental Principal Component Analysis and Its Application for Face Recognition},
+  journal =       {IEEE Trans. on Systems, Man, and Cybernetics, Part B},
+  volume =   {36},
+  number =   {4},
+  year =         {2006},
+  pages =    {873--886},
+}
