--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1328,3 +1328,22 @@ year={2008},
   year =         {2006},
   pages =    {873--886},
 }
+@Article{Kim:Computer'03,
+  author =       {N. S. Kim and Todd Austin and David Blaauw and Trevor Mudge and Krisztián Flautner and Jie S. Hu and Mahmut Kandemir and Vijaykrishnan Narayanan},
+  title =        {Leakage current: Moore's law meets static power},
+  journal =      {Computer},
+  volume =   {36},
+  number =   {12},
+  year =         {2003},
+  pages =    {68--75},
+}
+  
+@Article{Mudge:Computer'01,
+  author =       {Trevor Mudge},
+  title =        {Power: a first-class architectural design constraint},
+  journal =      {Computer},
+  volume =   {34},
+  number =   {4},
+  year =         {2001},
+  pages =    {52--58},
+ }
