--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1347,3 +1347,12 @@ year={2008},
   year =         {2001},
   pages =    {52--58},
  }
+
+@inproceedings{Mantovani:DAC'16,
+ author = {Paolo Mantovani and Emilio G. Cota and Kevin Tien and Christian Pilato and Giuseppe Di Guglielmo and Ken Shepard and Luca P. Carloni},
+ title = {An {FPGA}-Based Infrastructure for Fine-Grained {DVFS} Analysis in High-Performance Embedded Systems},
+ booktitle = dac,
+ year = {2016},
+ pages = {1--6},
+ location = {Austin, TX},
+ }
