--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -65,6 +65,24 @@
 }
 
 
+@inproceedings{WanWang:ICSICT'16,
+ author = {Jiachun Wan and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
+ title = {A Fast Full-Chip Static Power Estimation Method},
+ booktitle = icsict,
+ year = {2016},
+ month = {October},
+ location = {Hangzhou, China}
+}
+
+@inproceedings{XuWang:ICSICT'16,
+ author = {Lei Xu and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
+ title = {Distributed Model Predictive Control for Dynamic Thermal Management of Multi-Core Systems},
+ booktitle = icsict,
+ year = {2016},
+ month = {October},
+ location = {Hangzhou, China}
+}
+
 @inproceedings{LiuWang:ASPDAC'16,
  author = {Wandi Liu and Hai Wang and Hengyang Zhao and Shujuan Wang and Haibao Chen and Yuzhuo Fu and Jian Ma and Xin Li and Sheldon Tan},
  title = {Thermal Modeling for Energy-Efficient Smart Building With Advanced Overfitting Mitigation Technique},
