--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -41,10 +41,29 @@
 @string{istfa = "35th International Symposium for Testing and Failure Analysis, ISTFA"}
 @string{acmcomm="Communications of the ACM"}
 @string{socc="Proc. IEEE International System-on-Chip Conference (SOCC)"}
+@string{icsict="Proc. International Conference on Solid-State and Integrated Circuit Technology (ICSICT)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@inproceedings{WanWang:ICSICT'16,
+ author = {Jiachun Wan and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
+ title = {A Fast Full-Chip Static Power Estimation Method},
+ booktitle = icsict,
+ year = {2016},
+ month = {October},
+ location = {Hangzhou, China}
+}
+
+@inproceedings{XuWang:ICSICT'16,
+ author = {Lei Xu and Hai Wang and Sheldon X.-D. Tan and Chi Zhang and Yuan Yuan and Keheng Huang and Zhenghong Zhang},
+ title = {Distributed Model Predictive Control for Dynamic Thermal Management of Multi-Core Systems},
+ booktitle = icsict,
+ year = {2016},
+ month = {October},
+ location = {Hangzhou, China}
+}
+
 
 @inproceedings{LiuWang:ASPDAC'16,
  author = {Wandi Liu and Hai Wang and Hengyang Zhao and Shujuan Wang and Haibao Chen and Yuzhuo Fu and Jian Ma and Xin Li and Sheldon Tan},
@@ -1356,3 +1375,14 @@ year={2008},
  pages = {1--6},
  location = {Austin, TX},
  }
+
+@Article{Rotem:MICRO'12,
+  author =       {Efraim Rotem and Alon Naveh and Doron Rajwan and Avinash Ananthakrishnan and Eliezer Weissmann},
+  title =        {Power-management architecture of the intel microarchitecture code-named sandy bridge},
+  journal =      {IEEE Micro},
+  year =         {2012},
+  pages =    {20--27},
+  volume = {32},
+  number = {2},
+  month = {March},
+}
