--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -295,6 +295,15 @@ pages = {187--192}
  location = {San Jose, CA, USA},
  }
 
+@inproceedings{Liu:ICCAD'05,
+ author = {Pu Liu and Zhenyu Qi and Hang Li and Lingling Jin and Wei Wu and Sheldon X.-D. Tan and Jun Yang},
+ title = {Fast thermal simulation for architecture level dynamic thermal management},
+ booktitle = iccad,
+ year = {2005},
+ pages = {638--643},
+ location = {San Jose, CA, USA},
+ }
+
 @Article{Mutapcic:TCASI'09,
   author =       {Almir Mutapcic and Stephen Boyd and Srinivasan Murali and David Atienza and Giovanni {De Micheli} and Rajesh Gupta},
   title =        {Processor Speed Control with Thermal Constraints},
@@ -1404,3 +1413,32 @@ year={2008},
   number = {2},
   month = {March},
 }
+
+@inproceedings{Codecasa:ITHERM'06,
+ author = {Lorenzo Codecasa and Dario D'Amore and Paolo Maffezzoni},
+ title = {Boundary condition independent compact models of dynamic thermal networks with many heat sources},
+ booktitle = {Proc. Thermal and Thermomechanical Phenomena in Electronics Systems},
+ year = {2006},
+ pages = {685--689},
+ location = {San Diego, CA},
+ }
+
+@Article{Han:JLPE'07,
+  author =       {Efraim Rotem and Alon Naveh and Doron Rajwan and Avinash Ananthakrishnan and Eliezer Weissmann},
+  title =        {{TILTS}: A Fast Architectural-Level Transient Thermal Simulation Method},
+  journal =      {Journal of Low Power Electronics},
+  year =         {2007},
+  pages =    {13--21},
+  volume = {3},
+  number = {1},
+  month = {April},
+}
+
+@inproceedings{Zhan:ICCAD'05,
+ author = {Yong Zhan and Sachin S. Sapatnekar},
+ title = {A High Efficiency Full-Chip Thermal Simulation Algorithm},
+ booktitle = iccad,
+ year = {2005},
+ pages = {634--637},
+ location = {San Jose, CA},
+ }
