--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1442,3 +1442,12 @@ year={2008},
  pages = {634--637},
  location = {San Jose, CA},
  }
+
+@inproceedings{Park:ISQED'08,
+ author = {Je-Hyoung Park and Ali Shakouri and Sung-Mo Kang},
+ title = {Fast Evaluation Method for Transient Hot Spots in {VLSI} {ICs} in Packages},
+ booktitle = isqed,
+ year = {2008},
+ pages = {600--603},
+ location = {San Jose, CA},
+ }
