--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1451,3 +1451,22 @@ year={2008},
  pages = {600--603},
  location = {San Jose, CA},
  }
+
+@article{Memik:TCAD'08,
+ author = {Seda Ogrenci Memik and Rajarshi Mukherjee and Min Ni and Jieyi Long},
+ title = {Optimizing Thermal Sensor Allocation for Microprocessors},
+ journal = tcad,
+ volume = {27},
+ number = {3},
+ year = {2008},
+ pages = {516--527},
+ month =  {March},
+ }
+
+@inproceedings{Nowroz:DAC'10,
+ author = {Abdullah Nazma Nowroz and Ryan Cochran and Sherief Reda},
+ title = {Thermal monitoring of real processors: Techniques for sensor allocation and full characterization},
+ booktitle = dac,
+ year = {2010},
+ location = {Anaheim, CA},
+ }
