--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1451,3 +1451,17 @@ year={2008},
  pages = {600--603},
  location = {San Jose, CA},
  }
+
+@Article{LiuTan:TVLSI'14_2,
+  author = 	 {Z Liu and S. X.-D. Tan, X. Huang and H. Wang},
+  title = 	 {Task migrations for distributed thermal management considering transient effects},
+  journal = 	 tvlsi,
+  year = 	 {2015},
+  OPTkey = 	 {},
+  volume = 	 {23},
+  number = 	 {2},
+  pages = 	 {397-401},
+  month = 	 {Feb.},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
