--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -271,7 +271,7 @@ pages = {187--192}
 }
 
 @inproceedings{Ayoub:ISLPED'09,
- author = {Raid Ayoub and Tajana Rosing},
+ author = {Raid Ayoub and Tajana \v{S}imuni\'{c} Rosing},
  title = {Predict and Act: Dynamic Thermal Management for Multi-Core Processor},
  booktitle = islped,
  year = {2009},
@@ -525,7 +525,7 @@ pages = {187--192}
 
 
 @inproceedings{Shafique:DAC'14,
-author={ Shafique,Muhammad and Garg, Shelly and Henkel, Jorg and Marculescu, Dinan},
+author={ Shafique,Muhammad and Garg, Shelly and Henkel, J\"{o}rg and Marculescu, Dinan},
 title={The {EDA} challenges in the dark silicon era},
 booktitle= dac,
 year={2014},
@@ -542,14 +542,14 @@ month ={June.},
 
 @inproceedings{Pagani:CODES'14,
   title={{TSP}: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
-  author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, Jorg},
+  author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, J\"{o}rg},
   booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
   year={2014}
 }
 
 @inproceedings{Shafique:CODES'14,
   title={Dark silicon as a challenge for hardware/software co-design},
-  author={Muhammad Shafique and Siddharth Garg and Tulika Mitra and Sri Parameswaran and Jorg Henkel},
+  author={Muhammad Shafique and Siddharth Garg and Tulika Mitra and Sri Parameswaran and J\"{o}rg Henkel},
   booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
   year={2014}
 }
@@ -705,7 +705,7 @@ month ={June.},
 @inproceedings{Khdr:DAC'15,
   title={Thermal Constrained Resource Management
 for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
-  author={Heba Khdr and Santiago Pagani and Muhammad Shafique and Jörg Henkel},
+  author={Heba Khdr and Santiago Pagani and Muhammad Shafique and J\"{o}rg Henkel},
   booktitle= dac,
   pages={1--6},
   year={2015},
@@ -1075,7 +1075,7 @@ Year = {2010},
 
 @inproceedings{Henkel:DAC'15,
   title={New Trends in Dark Silicon},
-  author={Jorg Henkel and Heba Khdr and Santiago Pagani and Muhammad Shafique},
+  author={J\"{o}rg Henkel and Heba Khdr and Santiago Pagani and Muhammad Shafique},
   booktitle= dac,
   month =  {June},
   year={2015},
@@ -1091,7 +1091,7 @@ Year = {2010},
 
 @inproceedings{Bokhari:DAC'14,
   title={{darkNoC}: Designing Energy-Efficient Network-on-Chip with Multi-Vt Cells for Dark Silicon},
-  author={Haseeb Bokhari and Haris Javaid and Muhammad Shafique and Jorg Henkel and Sri Parameswaran},
+  author={Haseeb Bokhari and Haris Javaid and Muhammad Shafique and J\"{o}rg Henkel and Sri Parameswaran},
   booktitle= dac,
   month =  {June},
   year={2014},
@@ -1099,7 +1099,7 @@ Year = {2010},
 
 @inproceedings{Shafique:DATE'15,
   title={Variability-aware dark silicon management in on-chip many-core systems},
-  author={Muhammad Shafique and Dennis Gnad and Siddharth Garg and Jorg Henkel},
+  author={Muhammad Shafique and Dennis Gnad and Siddharth Garg and J\"{o}rg Henkel},
   booktitle= date,
   month =  {March},
   year={2015},
@@ -1108,7 +1108,7 @@ Year = {2010},
 
 @inproceedings{Khan:ISLPED'15,
   title={Hierarchical power budgeting for Dark Silicon chips},
-  author={Muhammad Khan and Muhammad Shafique and Jorg Henkel},
+  author={Muhammad Khan and Muhammad Shafique and J\"{o}rg Henkel},
   booktitle= islped,
   month =  {July},
   year={2015},
@@ -1560,4 +1560,12 @@ year={2008},
  year = {2014},
  pages = {1097--1110},
  month =  {May},
+ }
+
+@inproceedings{Shin:ISQED'15,
+ author = {Jun Yong Shin and Fadi Kurdahi and Nikil Dutt},
+ title = {Thermal Sensor Allocation for SoCs Based on Temperature Gradients},
+ booktitle = isqed,
+ year = {2015},
+ location = {Santa Clara, CA},
  }
