--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -206,7 +206,7 @@ month ={Nov.},
 }
 
 @Article{LiuTan:TVLSI'14_2,
-  author = 	 {Z Liu and S. X.-D. Tan, X. Huang and H. Wang},
+  author = 	 {Zao Liu and Sheldon X.-D. Tan and Xin Huang and Hai Wang},
   title = 	 {Task migrations for distributed thermal management considering transient effects},
   journal = 	 tvlsi,
   year = 	 {2015},
@@ -874,7 +874,7 @@ month = {April}
 
 @inproceedings{Sarangi:ASPDAC'14,
   title={{LightSim}: A Leakage Aware Ultrafast Temperature Simulator},
-  author={Smruti Sarangi and Gayathri Ananthanarayanan and M. Balakrishnan},
+  author={Smruti R. Sarangi and Gayathri Ananthanarayanan and M. Balakrishnan},
   booktitle= aspdac,
   pages={855--860},
   year={2014},
@@ -1584,3 +1584,24 @@ year={2008},
  year = {2015},
  location = {Santa Clara, CA},
  }
+
+
+@Article{Ku:TVLSI'07,
+  author =       {Ja Chun Ku and Serkan Ozdemir and Gokhan Memik and Yehea Ismail},
+  title =        {Thermal Management of On-Chip Caches Through Power Density Minimization},
+  journal =     tvlsi,
+  year =         {2007},
+  volume =   {15},
+  number =   {5},
+  pages =     {592--604},
+  month =     {May},
+}
+
+@inproceedings{Sultan:DATE'17,
+  title={A fast leakage aware thermal simulator for 3D chips},
+  author={Hameedah Sultan and Smruti R. Sarangi},
+  booktitle= date,
+  month =  {March},
+  year={2017},
+  pages =    {1733--1738},
+}
