--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -263,6 +263,8 @@ location = {San Diego, CA, USA},
 pages = {579--584}
 }
 
+
+
 @Article{Chantem:TVLSI'11,
   author =       {Thidapat Chantem and Sharon Hu and Robert Dick},
   title =        {Temperature-Aware Scheduling and Assignment for Hard Real-Time Applications on {MPSoCs}},
@@ -546,6 +548,16 @@ year={2014},
 pages = {1--6},
 month ={June.},
 }
+
+@inproceedings{Huang:DAC'04,
+author={ Wei Huang,Mircea R. Stan, Kevin Skadron, Karthik Sankaranarayanan Shougata Ghosh, Sivakumar Velusamy},
+title={Compact Thermal Modeling for Temperature-Aware Design},
+booktitle= dac,
+year={2004},
+pages = {878--883 },
+month ={June.},
+}
+
 
 @book{Boyd:Convex_BOOK'06,
       author       = "Stephen Boyd and Lieven Vandenberghe ",
