--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -550,7 +550,7 @@ month ={June.},
 }
 
 @inproceedings{Huang:DAC'04,
-author={ Wei Huang,Mircea R. Stan, Kevin Skadron, Karthik Sankaranarayanan Shougata Ghosh, Sivakumar Velusamy},
+author={ Wei Huang, Mircea R. Stan and Kevin Skadron and Karthik  ankaranarayanan and Shougata Ghosh and Sivakumar Velusamy},
 title={Compact Thermal Modeling for Temperature-Aware Design},
 booktitle= dac,
 year={2004},
