--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -112,6 +112,8 @@
  location = {Seattle, WA}
 }
 
+
+
 @inproceedings{WangTan:DATE'12,
  author = {Hai Wang and Sheldon X.-D. Tan and Xue-Xin Liu and Ashish Gupta},
  title = {Runtime power estimator calibration for high-performance microprocessors},
@@ -284,6 +286,16 @@ year = {2012},
 month = {March},
 location = {Dresden, Germany},
 pages = {187--192}
+}
+
+@inproceedings{Bartolini:DATE'11,
+ author = {Andrea Bartolini and Matteo Cacciari and Andrea Tilli and Luca Benini},
+ title = {A Distributed and Self-Calibrating Model-Predictive Controller for Energy and Thermal management of High-Performance Multicores},
+ booktitle = date,
+ year = {2011},
+ month = {March},
+ location = {Grenoble, France},
+ pages = {1--6}
 }
 
 @inproceedings{Ayoub:ISLPED'09,
