--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1629,3 +1629,21 @@ year={2008},
   year={2017},
   pages =    {1733--1738},
 }
+
+@article{David:TJOP'62,
+author = { Hubel David and Wiesel Torsten },
+title = {Receptive Fields, Binocular Interaction and Functional Architecture in The Cat's Visual Cortex},
+journal = {The Journal of Physiology},
+volume = {160},
+number = {1}
+pages = {106--154}
+year = {1962},
+}
+
+@inproceedings{Kunihiko:CCNN'82,
+author = {Fukushima Kunihiko and Miyake Sei},
+title = {Neocognitron: A Self-organizing Neural Network Model for A Mechanism of Visual Pattern Recognition},
+booktitle = {Competition and Cooperation in Neural Nets},
+pages = {267--285},
+year = {1982},
+}
