--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -585,6 +585,24 @@ month ={June.},
   year={2014}
 }
 
+@inproceedings{Pagani:IGSC'15,
+  title={Thermal-aware power budgeting for dark silicon chips},
+  author={Santiago Pagani and Jian-Jia Chen and Muhammad Shafique and J\"{o}rg Henkel},
+  booktitle={Proc. International Green and Sustainable Computing Conference},
+  year={2015}
+}
+
+@article{Pagani:TOC'17,
+  author={Santiago Pagani and Heba Khdr and Jian-Jia Chen and Muhammad Shafique and Minming Li and J\"{o}rg Henkel},
+  title={Thermal Safe Power ({TSP}): Efficient Power Budgeting for Heterogeneous Manycore Systems in Dark Silicon},
+  journal = toc,
+  year={2017},
+  volume = {66},
+  number = {1},
+  pages = {147--162},
+  month =  {January}
+}
+
 @inproceedings{Shafique:CODES'14,
   title={Dark silicon as a challenge for hardware/software co-design},
   author={Muhammad Shafique and Siddharth Garg and Tulika Mitra and Sri Parameswaran and J\"{o}rg Henkel},
@@ -756,6 +774,25 @@ for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
   pages={345--350},
   year={2012},
 }
+
+@inproceedings{Rahmani:ISLPED'15,
+  title={Dynamic power management for many-core platforms in the dark silicon era: A multi-objective control approach},
+  author={Amir-Mohammad Rahmani and Mohammad-Hashem Haghbayan and Anil Kanduri and Awet Yemane Weldezion and Pasi Liljeberg and Juha Plosila and Axel Jantsch and Hannu Tenhunen},
+  booktitle= islped,
+  year={2015},
+}
+
+@article{Rahmani:TVLSI'17,
+  title={Reliability-Aware Runtime Power Management for Many-Core Systems in the Dark Silicon Era},
+  author={Amir-Mohammad Rahmani and Mohammad-Hashem Haghbayan and Antonio Miele and Pasi Liljeberg and Axel Jantsch and Hannu Tenhunen},
+    journal =  tvlsi,
+  year={2017},
+  volume = {25},
+  number = {2},
+  pages = {427--440},
+  month =  {February}
+}
+
 
 @inproceedings{Tan:ASPDAC'15,
   title={Approximation-Aware Scheduling on Heterogeneous Multi-core Architectures},
