--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1672,8 +1672,8 @@ author = { Hubel David and Wiesel Torsten },
 title = {Receptive Fields, Binocular Interaction and Functional Architecture in The Cat's Visual Cortex},
 journal = {The Journal of Physiology},
 volume = {160},
-number = {1}
-pages = {106--154}
+number = {1},
+pages = {106--154},
 year = {1962},
 }
 
