--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
@@ -1683,4 +1683,25 @@ title = {Neocognitron: A Self-organizing Neural Network Model for A Mechanism of
 booktitle = {Competition and Cooperation in Neural Nets},
 pages = {267--285},
 year = {1982},
+}
+
+@article{Samuel:EB'11,
+   title={Model predictive control of a building heating system: The first experience},
+  author={Privara Samuel and {\v{S}}irok{\`y} Jan and Ferkl Luk{\'a}{\v{s}} and Cigler Ji{\v{r}}{\'\i}},
+  journal={Energy and Buildings},
+  volume={43},
+  number={2},
+  pages={564--572},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{Kenneth:QAM'44,
+  title={A method for the solution of certain non-linear problems in least squares},
+  author={Levenberg Kenneth},
+  journal={Quarterly of applied mathematics},
+  volume={2},
+  number={2},
+  pages={164--168},
+  year={1944}
 }
