--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1705,3 +1705,21 @@ year = {1982},
   pages={164--168},
   year={1944}
 }
+
+@Book{Goodfellow:Book’16,
+Author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+Title={Deep Learning},
+Publisher={The MIT Press},
+Year={2016}
+}
+
+@article{Yann:IEEEPROC’98,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun Yann and Bottou L{\'e}on and Bengio Yoshua and Haffner Patrick},
+  journal= ieeeproc,
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
