--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1723,3 +1723,15 @@ Year={2016}
   year={1998},
   publisher={IEEE}
 }
+
+@article{Moongon:ACMCOMM’14,
+  title={TSV stress-aware full-chip mechanical reliability analysis and optimization for 3D IC},
+  author={Jung Moongon and Mitra Joydeep and Z.Pan David  and Lim Sung Kyu},
+  journal=acmcomm,
+  volume={57},
+  number={1},
+  pages={107--115},
+  year={2014},
+  publisher={ACM}
+}
+
