--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1725,7 +1725,7 @@ Year={2016}
 }
 
 @article{Moongon:ACMCOMM’14,
-  title={TSV stress-aware full-chip mechanical reliability analysis and optimization for 3D IC},
+  title={{TSV} stress-aware full-chip mechanical reliability analysis and optimization for {3D IC}},
   author={Jung Moongon and Mitra Joydeep and Z.Pan David  and Lim Sung Kyu},
   journal=acmcomm,
   volume={57},
