--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1726,7 +1726,7 @@ Year={2016}
 
 @article{Moongon:ACMCOMM’14,
   title={{TSV} stress-aware full-chip mechanical reliability analysis and optimization for {3D IC}},
-  author={Jung Moongon and Mitra Joydeep and Z.Pan David  and Lim Sung Kyu},
+  author={Moongon Jung and Joydeep Mitra and David Z.Pan  and Sung Kyu Lim},
   journal=acmcomm,
   volume={57},
   number={1},
