--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1667,8 +1667,8 @@ year={2008},
   pages =    {1733--1738},
 }
 
-@article{David:TJOP'62,
-author = { Hubel David and Wiesel Torsten },
+@article{Hubel:TJOP'62,
+author = {David Hubel and Torsten Wiesel },
 title = {Receptive Fields, Binocular Interaction and Functional Architecture in The Cat's Visual Cortex},
 journal = {The Journal of Physiology},
 volume = {160},
@@ -1677,8 +1677,8 @@ pages = {106--154},
 year = {1962},
 }
 
-@inproceedings{Kunihiko:CCNN'82,
-author = {Fukushima Kunihiko and Miyake Sei},
+@inproceedings{Fukushima:CCNN'82,
+author = {Kunihiko Fukushima and Sei Miyake},
 title = {Neocognitron: A Self-organizing Neural Network Model for A Mechanism of Visual Pattern Recognition},
 booktitle = {Competition and Cooperation in Neural Nets},
 pages = {267--285},
@@ -1715,7 +1715,7 @@ Year={2016}
 
 @article{Yann:IEEEPROC’98,
   title={Gradient-based learning applied to document recognition},
-  author={LeCun Yann and Bottou L{\'e}on and Bengio Yoshua and Haffner Patrick},
+  author={Yann LeCun and L{\'e}on Bottou and Yoshua Bengio and Patrick Haffner},
   journal= ieeeproc,
   volume={86},
   number={11},
